CSS Apartment single item page done

--- a/html/apartmani/superior-apartment.html
+++ b/html/apartmani/superior-apartment.html
@@ -43,24 +43,24 @@
         <section class="hero">
             <img class="hero-img" src="https://meneghetti.hr/_nuxt/assets/img/accommodation/hero/villas1ff8bc3.jpg" alt="">
         </section>
-        <section class="section about-us">'
+        <section class="section about-us">
             <div class="about">
-                <h1>Bonanza</h1>
-                <h2>Hotel-like apartments</h2>
-                <p>U potrazi za jedinstvenim mjestima potrebno je ponekad skrenuti s glavnog puta. No neka vas glavni putevi dovedu do Istre, do Bala. A zatim usporite i pratite cestu koja se sa svakim kilometrom sve više sužava, dok vam se priroda sve više približava. Usporite još i više te skrenite na bijelu cestu na kraju koje se pred vama otvaraju velika željezna vrata. Stigli ste na Meneghetti. Zatim zastanite bar na trenutak – i uvjerite se da se najbolja mjesta nalaze na sporednim putevima.</p>
+                <h1 class="h1-el-fnt">Bonanza</h1>
+                <h2 class="h2-el-fnt">Hotel-like apartments</h2>
+                <p class="mt fs fnt-w-l">U potrazi za jedinstvenim mjestima potrebno je ponekad skrenuti s glavnog puta. No neka vas glavni putevi dovedu do Istre, do Bala. A zatim usporite i pratite cestu koja se sa svakim kilometrom sve više sužava, dok vam se priroda sve više približava. Usporite još i više te skrenite na bijelu cestu na kraju koje se pred vama otvaraju velika željezna vrata. Stigli ste na Meneghetti. Zatim zastanite bar na trenutak – i uvjerite se da se najbolja mjesta nalaze na sporednim putevima.</p>
             </div>
             <div class="mini-gallery">
-                <img style="height: 400px; width: 300px;" src="https://meneghetti.hr/_nuxt/assets/img/masonry113d415a.jpg" alt="">
+                <img src="https://meneghetti.hr/_nuxt/assets/img/masonry113d415a.jpg" alt="">
             </div>
         </section>
         <section class="section accommodation">
-            <div class="single-accommodation-left">
-                <div class="single-accommodataion-image">
-                    <img style="height: 400px; width: 300px;" src="../../images/apartment1.png" alt="">
+            <div class="accommodation-item-left accommodation-item">
+                <div class="accommodataion-item-image">
+                    <img src="../../images/apartment-img1.jpg" alt="">
                 </div>
-                <div class="single-accommodation-content">
-                    <p>Vila s 1 sobom, balkonom i privatnim bazenom</p>
-                    <div class="single-acomodation-content-description">
+                <div class="accommodation-item-content">
+                    <p class="h2-el-fnt accomod-p-fnt">Vila s 1 sobom, balkonom i privatnim bazenom</p>
+                    <div class="acomodation-item-content-description mt ml-sm">
                         <ul>
                             <li>Bračni krevet u sobi i kauč na razvlačenje u dnevnom boravku</li>
                             <li>75 m2/807 sqft</li>
@@ -70,14 +70,15 @@
                             <li>Privatni vrt s bazenom i pogledom na maslinike</li>
                             <li>Privatni parking</li>
                         </ul>
-                        <a href="#" class="btn">Rezervisi</a>
                     </div>
+                    <a href="#" class="btn mt">Rezervisi</a>
                 </div>
             </div>
-            <div class="single-accommodation-right">
-                <div class="single-accommodation-content">
-                    <p>Vila s 1 sobom, balkonom i privatnim bazenom</p>
-                    <div class="single-acomodation-content-description">
+
+            <div class="accommodation-item-right accommodation-item">
+                <div class="accommodation-item-content">
+                    <p class="h2-el-fnt accomod-p-fnt">Vila s 1 sobom, balkonom i privatnim bazenom</p>
+                    <div class="acomodation-item-content-description mt ml-sm">
                         <ul>
                             <li>Bračni krevet u sobi i kauč na razvlačenje u dnevnom boravku</li>
                             <li>75 m2/807 sqft</li>
@@ -87,20 +88,21 @@
                             <li>Privatni vrt s bazenom i pogledom na maslinike</li>
                             <li>Privatni parking</li>
                         </ul>
-                        <a href="#" class="btn">Rezervisi</a>
                     </div>
+                    <a href="#" class="btn mt">Rezervisi</a>
                 </div>
-                <div class="single-accommodataion-image">
-                    <img style="height: 400px; width: 300px;" src="../../images/apartment1.png" alt="">
+                <div class="accommodataion-item-image">
+                    <img src="../../images/apartment2.png" alt="">
                 </div>
             </div>
-            <div class="single-accommodation-left">
-                <div class="single-accommodataion-image">
-                    <img style="height: 400px; width: 300px;" src="../../images/apartment1.png" alt="">
+
+            <div class="accommodation-item-left accommodation-item">
+                <div class="accommodataion-item-image">
+                    <img src="../../images/apartment2.png" alt="">
                 </div>
-                <div class="single-accommodation-content">
-                    <p>Vila s 1 sobom, balkonom i privatnim bazenom</p>
-                    <div class="single-acomodation-content-description">
+                <div class="accommodation-item-content">
+                    <p class="h2-el-fnt accomod-p-fnt">Vila s 1 sobom, balkonom i privatnim bazenom</p>
+                    <div class="acomodation-item-content-description mt ml-sm">
                         <ul>
                             <li>Bračni krevet u sobi i kauč na razvlačenje u dnevnom boravku</li>
                             <li>75 m2/807 sqft</li>
@@ -110,13 +112,13 @@
                             <li>Privatni vrt s bazenom i pogledom na maslinike</li>
                             <li>Privatni parking</li>
                         </ul>
-                        <a href="#" class="btn">Rezervisi</a>
                     </div>
+                    <a href="#" class="btn mt">Rezervisi</a>
                 </div>
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer-bg">
         <div class="footer-top">
             <div class="footer-top-left">
                 <p class="fnt-w-b">OSTANIMO U KONTAKTU</p>
