CSS Mini Gallery hover done

--- a/index.html
+++ b/index.html
@@ -58,19 +58,34 @@
             <div class="section-line"></div>
             <div class="gallery-container">
                 <div class="image w-two">
-                    <img src="images/image7.jpg" onclick="openModal();currentSlide(1)" alt="">
+                    <img src="images/image7.jpg" alt="">
+                    <div class="image-overlay"  onclick="openModal();currentSlide(1)">
+                        <p class="hidden-fnt">pogledajte sliku u galeriji</p>
+                    </div>
                 </div>
                 <div class="image w-three">
-                    <img src="images/image6.jpg" onclick="openModal();currentSlide(2)" alt="">
+                    <img src="images/image6.jpg"alt="">
+                    <div class="image-overlay" onclick="openModal();currentSlide(2)" >
+                        <p class="hidden-fnt">pogledajte sliku u galeriji</p>
+                    </div>
                 </div>
                 <div class="image w-two">
-                    <img src="images/image8.jpg" onclick="openModal();currentSlide(3)" alt="">
+                    <img src="images/image8.jpg" alt="">
+                    <div class="image-overlay" onclick="openModal();currentSlide(2)" >
+                        <p class="hidden-fnt">pogledajte sliku u galeriji</p>
+                    </div>
                 </div>
                 <div class="image w-one">
-                    <img src="images/image9.jpg" onclick="openModal();currentSlide(4)" alt="">
+                    <img src="images/image9.jpg" alt="">
+                    <div class="image-overlay" onclick="openModal();currentSlide(2)" >
+                        <p class="hidden-fnt">pogledajte sliku u galeriji</p>
+                    </div>
                 </div>
                 <div class="image w-one">
-                    <img src="images/image10.jpg" onclick="openModal();currentSlide(5)" alt="">
+                    <img src="images/image10.jpg" alt="">
+                    <div class="image-overlay" onclick="openModal();currentSlide(2)" >
+                        <p class="hidden-fnt">pogledajte sliku u galeriji</p>
+                    </div>
                 </div>
             </div>
 
@@ -131,8 +146,9 @@
                       <a class="mini-next" onclick="plusSlides(1)">&#10095;</a>
                   </div>
                 </div>
-              </div>
+            </div>
         </section>
+        
         <section class="section apartments">
             <h1 class="h1-el-fnt">Apartmani</h1>
             <h2 class="h2-el-fnt">UDOBNOST DIZAJNIRANA ZA BEZBRIŽAN ODMOR</h2>
