--- a/index.html
+++ b/index.html
@@ -58,32 +58,32 @@
             <div class="section-line"></div>
             <div class="gallery-container">
                 <div class="image w-two">
-                    <img src="images/image7.jpg" alt="">
-                    <div class="image-overlay"  onclick="openModal();currentSlide(1)">
+                    <img src="images/image7.jpg" onclick="openModal();currentSlide(1)" alt="">
+                    <div class="image-overlay" onclick="openModal();currentSlide(1)">
                         <p class="hidden-fnt">pogledajte sliku u galeriji</p>
                     </div>
                 </div>
                 <div class="image w-three">
-                    <img src="images/image6.jpg"alt="">
+                    <img src="images/image6.jpg" onclick="openModal();currentSlide(2)" alt="">
                     <div class="image-overlay" onclick="openModal();currentSlide(2)" >
                         <p class="hidden-fnt">pogledajte sliku u galeriji</p>
                     </div>
                 </div>
                 <div class="image w-two">
-                    <img src="images/image8.jpg" alt="">
-                    <div class="image-overlay" onclick="openModal();currentSlide(2)" >
+                    <img src="images/image8.jpg" onclick="openModal();currentSlide(3)" alt="">
+                    <div class="image-overlay" onclick="openModal();currentSlide(3)" >
                         <p class="hidden-fnt">pogledajte sliku u galeriji</p>
                     </div>
                 </div>
                 <div class="image w-one">
-                    <img src="images/image9.jpg" alt="">
-                    <div class="image-overlay" onclick="openModal();currentSlide(2)" >
+                    <img src="images/image9.jpg" onclick="openModal();currentSlide(4)" alt="">
+                    <div class="image-overlay" onclick="openModal();currentSlide(4)" >
                         <p class="hidden-fnt">pogledajte sliku u galeriji</p>
                     </div>
                 </div>
                 <div class="image w-one">
-                    <img src="images/image10.jpg" alt="">
-                    <div class="image-overlay" onclick="openModal();currentSlide(2)" >
+                    <img src="images/image10.jpg" onclick="openModal();currentSlide(5)" alt="">
+                    <div class="image-overlay" onclick="openModal();currentSlide(5)" >
                         <p class="hidden-fnt">pogledajte sliku u galeriji</p>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                         <a href="#" class="apartment-image">
                             <img src="images/apartment1.png" alt="">
                             <div class="apartment-content-overlay ptb plr">
-                                <p class="apartment-title">Superior</p>
+                                <p class="apartment-title">Standard</p>
                                 <div class="aparment-content-overlay-hidden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
                                     <p class="mt hidden-fnt">Pogledaj</p>
