--- a/html/galerija.html
+++ b/html/galerija.html
@@ -56,7 +56,7 @@
                                 <p class="apartment-title">Superior</p>
                                 <div class="aparment-content-overlay-hidden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
-                                    <p>Pogledaj</p>
+                                    <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
                         </a>
@@ -68,7 +68,7 @@
                                 <p class="apartment-title">Standard</p>
                                 <div class="aparment-content-overlay-hidden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
-                                    <p>Pogledaj</p>
+                                    <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
                         </a>
@@ -80,7 +80,7 @@
                                 <p class="apartment-title">Studio</p>
                                 <div class="aparment-content-overlay-hidden">
                                     <p>Za opušten odmor vaše velike obitelji</p>
-                                    <p>Pogledaj</p>
+                                    <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
                         </a>
