--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/logo.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/dbad9f8d2b.js" defer crossorigin="anonymous"></script>
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
     <title>Bonanza | Apartments | Nis</title>
 </head>
 <body>
@@ -194,6 +195,7 @@
                 </div>  
             </div>
         </section>
+        <div class="elfsight-app-025c78fb-54a1-4afb-882a-f246f42ed6a2"></div>
     </main>
     <footer>
         <div class="footer-top">
