--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
                 <div class="email-form">
                     <p class="fnt-w-b">PRIDRUŽITE SE KLUBU BONANZA</p>
                     <p class="mt">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠĆENIM CENAMA!</p>
-                    <form action="post" target="_blank">
-                        <input class="mt" type="text" placeholder="Email">
-                        <button class="btn mt" type="submit">Pridruži se klubu!</button>
+                    <form action="php/sendToDatabase.php" method="post">
+                        <input class="mt" name="email" type="text" placeholder="Email">
+                        <button class="btn mt" name="submit" type="submit">Pridruži se klubu!</button>
                     </form>
                 </div>
             </div>
