--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="upper-header">
             <div class="logo">
                 <a href="index.html" class="logo">
-                    <img style="width: 100px; height: 70px;" src="images/logo.jpg" alt="logo">
+                    <img style="width: 80px; height: 80px;" src="images/logo.svg" alt="logo">
                 </a>
             </div>
             <div class="booking">
@@ -40,7 +40,7 @@
     </header>
     <main>
         <section class="hero">
-            <img class="hero-img" src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
+            <img class="hero-img" src="images/hero2.jpg" alt="">
         </section>
         <section class="section about-us">
             <div class="about">
