--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/logo.jpg" type="image/x-icon">
+    <link rel="icon" href="images/logo.svg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/dbad9f8d2b.js" defer crossorigin="anonymous"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
     <title>Bonanza | Apartments | Nis</title>
@@ -15,7 +15,7 @@
         <div class="upper-header">
             <div class="logo">
                 <a href="index.html" class="logo">
-                    <img style="width: 80px; height: 80px;" src="images/logo.svg" alt="logo">
+                    <img style="width: 100px; height: 100px;" src="images/logo2.svg" alt="logo">
                 </a>
             </div>
             <div class="booking">
