--- a/html/apartmani/studio-apartment.html
+++ b/html/apartmani/studio-apartment.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="../../css/hero.css">
-    <link rel="icon" href="../../images/logo.jpg" type="image/x-icon">
+    <link rel="icon" href="../../images/logo.svg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/dbad9f8d2b.js" defer crossorigin="anonymous"></script>
     <title>Studio | Bonanza | Apartments | Nis</title>
 </head>
