--- a/html/apartmani.html
+++ b/html/apartmani.html
@@ -44,7 +44,7 @@
                 <div class="container-wraper">
                     <div class="apartments-container-item apartment-item">
                         <a href="apartmani/superior-apartment.html" class="apartment-image">
-                            <img src="../images/apartment1.png" alt="">
+                            <img src="../images/superior1.JPG" alt="">
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Superior</p>
                                 <div class="aparment-content-overlay-hidden">
@@ -56,7 +56,7 @@
                     </div>
                     <div class="apartments-container-item apartment-item">
                         <a href="apartmani/standard-apartment.html" class="apartment-image">
-                            <img src="../images/apartment2.png" alt="">
+                            <img src="../images/standard.JPG" alt="">
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Standard</p>
                                 <div class="aparment-content-overlay-hidden">
@@ -68,7 +68,7 @@
                     </div>
                     <div class="apartments-container-item apartment-item">
                         <a href="apartmani/studio-apartment.html" class="apartment-image">
-                            <img src="../images/apartment3.png" alt="">
+                            <img src="../images/studio.JPG" alt="">
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Studio</p>
                                 <div class="aparment-content-overlay-hidden">
