--- a/html/galerija.html
+++ b/html/galerija.html
@@ -51,7 +51,7 @@
                 <div class="container-wraper">
                     <div class="apartments-container-item apartment-item">
                         <a href="galerija/superior.html" class="apartment-image">
-                            <img src="../images/apartment1.png" alt="">
+                            <img src="../images/superior1.JPG" alt="">
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Superior</p>
                                 <div class="aparment-content-overlay-hidden">
@@ -63,7 +63,7 @@
                     </div>
                     <div class="apartments-container-item apartment-item">
                         <a href="galerija/standard.html" class="apartment-image">
-                            <img src="../images/apartment1.png" alt="">
+                            <img src="../images/standard.JPG" alt="">
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Standard</p>
                                 <div class="aparment-content-overlay-hidden">
@@ -75,7 +75,7 @@
                     </div>
                     <div class="apartments-container-item apartment-item">
                         <a href="galerija/studio.html" class="apartment-image">
-                            <img src="../images/apartment1.png" alt="">
+                            <img src="../images/studio.JPG" alt="">
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Studio</p>
                                 <div class="aparment-content-overlay-hidden">
