--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div class="container-wraper">
                     <div class="apartments-container-item apartment-item">
                         <a href="#" class="apartment-image">
-                            <img src="images/superior.JPG" alt="">
+                            <img src="images/superior1.JPG" alt="">
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Superior</p>
                                 <div class="aparment-content-overlay-hidden">
