Some text changes

--- a/html/galerija.html
+++ b/html/galerija.html
@@ -55,7 +55,7 @@
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Superior</p>
                                 <div class="aparment-content-overlay-hidden">
-                                    <p>Za opušten odmor vaše velike obitelji</p>
+                                    <p>Za opušten odmor vaše porodice</p>
                                     <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
@@ -67,7 +67,7 @@
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Standard</p>
                                 <div class="aparment-content-overlay-hidden">
-                                    <p>Za opušten odmor vaše velike obitelji</p>
+                                    <p>Za opušten odmor vaše porodice</p>
                                     <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
@@ -79,7 +79,7 @@
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Studio</p>
                                 <div class="aparment-content-overlay-hidden">
-                                    <p>Za opušten odmor vaše velike obitelji</p>
+                                    <p>Za opušten odmor vaše porodice</p>
                                     <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
