--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -56,8 +56,8 @@
                             <p class="h1-el-fnt ml-lg">Adresa</p>
                         </div>
                         <div class="card-info fnt-w-l">
-                            <p>Meneghetti Wine Hotel & Winery,</p>
-                            <p>Stancija Meneghetti 1, 52211 Bale, Istria, Croatia</p>
+                            <p>Bonanza Apartments Nis</p>
+                            <p>Trg kralja Milana 21, 18000 Nis, Serbia</p>
                         </div>
                     </div>
                     <div class="card mt">
@@ -66,27 +66,27 @@
                             <p class="h1-el-fnt ml-lg">Rezervacije i Informacije</p>
                         </div>
                         <div class="card-info fnt-w-l">
-                            <a style="color: black;" href="tel:+385 52 528 800">+385 52 528 800</a>
-                            <a style="color: black;"  href="mailto:reception@meneghetti.hr">reception@meneghetti.hr</a>
+                            <a style="color: black;" href="tel:+385 52 528 800">+381 62 670 256</a>
+                            <a style="color: black;"  href="mailto:reception@meneghetti.hr">apartmanibonanza@gmail.com</a>
                         </div>
                     </div>
                     <div class="card mt">
                         <div class="card-name">
                             <span class="line"></span>
-                            <p class="h1-el-fnt ml-lg">Informacije o tvrtki</p>
+                            <p class="h1-el-fnt ml-lg">Informacije o firmi</p>
                         </div>
                         <div class="card-info fnt-w-l">
-                            <p>Meneghetti d.o.o</p>
-                            <p>Stancija Meneghetti 1, 52211 Bale, Hrvatska</p>
-                            <p>OIB: 03413543055, MB: 4407938</p>
+                            <p>Bonanza PR</p>
+                            <p>Trg kralja Milana 21, 18000 Nis, Serbia</p>
+                            <p>PIB: 113004709</p>
                         </div>
                     </div>
                 </div>
                 <div class="contact-right">
                     <div class="contact-top">
                         <div class="contact-email">
-                            <p class="fnt-w-b">PRIDRUŽITE SE KLUBU MENEGHETTI</p>
-                            <p class="mt fnt-w-l">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CIJENAMA!</p>
+                            <p class="fnt-w-b">PRIDRUŽITE SE KLUBU BONANZA</p>
+                            <p class="mt fnt-w-l">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠTENIM CENAMA!</p>
                             <form action="post" target="_blank">
                                 <input type="text" placeholder="Email" class="mt">
                                 <button type="submit" class="btn mt">Pridruzi se klubu!</button>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="contact-down">
                         <p class="fnt-w-b">OSTANIMO U KONTAKTU</p>
-                        <p class="mt fnt-w-l">PODIJELITE SVOJE MENEGHETTI ISKUSTVO</p>
+                        <p class="mt fnt-w-l">PODELITE SVOJE BONANZA ISKUSTVO</p>
                         <div class="social-networks mt">
                             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
