--- a/index.html
+++ b/index.html
@@ -157,36 +157,36 @@
             <div class="apartments-container">
                 <div class="container-wraper">
                     <div class="apartments-container-item apartment-item">
-                        <a href="#" class="apartment-image">
+                        <a href="html/apartmani/superior-apartment.html" class="apartment-image">
                             <img src="images/superior1.JPG" alt="">
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Superior</p>
                                 <div class="aparment-content-overlay-hidden">
-                                    <p>Za opušten odmor vaše velike obitelji</p>
+                                    <p>Za opušten odmor vaše porodice</p>
                                     <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
                         </a>
                     </div>
                     <div class="apartments-container-item apartment-item">
-                        <a href="#" class="apartment-image">
+                        <a href="html/apartmani/standard-apartment.html" class="apartment-image">
                             <img src="images/standard.JPG" alt="">
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Standard</p>
                                 <div class="aparment-content-overlay-hidden">
-                                    <p>Za opušten odmor vaše velike obitelji</p>
+                                    <p>Za opušten odmor vaše porodice</p>
                                     <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
                         </a>
                     </div>
                     <div class="apartments-container-item apartment-item">
-                        <a href="#" class="apartment-image">
+                        <a href="html/apartmani/studio-apartment.html" class="apartment-image">
                             <img src="images/studio.JPG" alt="">
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Studio</p>
                                 <div class="aparment-content-overlay-hidden">
-                                    <p>Za opušten odmor vaše velike obitelji</p>
+                                    <p>Za opušten odmor vaše porodice</p>
                                     <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
