--- a/html/apartmani.html
+++ b/html/apartmani.html
@@ -48,7 +48,7 @@
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Superior</p>
                                 <div class="aparment-content-overlay-hidden">
-                                    <p>Za opušten odmor vaše velike obitelji</p>
+                                    <p>Za opušten odmor vaše porodice</p>
                                     <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
@@ -60,7 +60,7 @@
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Standard</p>
                                 <div class="aparment-content-overlay-hidden">
-                                    <p>Za opušten odmor vaše velike obitelji</p>
+                                    <p>Za opušten odmor vaše porodice</p>
                                     <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
@@ -72,7 +72,7 @@
                             <div class="apartment-content-overlay ptb plr">
                                 <p class="apartment-title">Studio</p>
                                 <div class="aparment-content-overlay-hidden">
-                                    <p>Za opušten odmor vaše velike obitelji</p>
+                                    <p>Za opušten odmor vaše porodice</p>
                                     <p class="mt hidden-fnt">Pogledaj</p>
                                 </div>
                             </div>
