HTML, logo, imgaes changes

--- a/html/apartmani/standard-apartment.html
+++ b/html/apartmani/standard-apartment.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../style.css">
-    <link rel="stylesheet" href="../../css/hero.css">
     <link rel="icon" href="../../images/logo.svg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/dbad9f8d2b.js" defer crossorigin="anonymous"></script>
     <title>Standard | Bonanza | Apartments | Nis</title>
@@ -15,9 +14,17 @@
         <div class="upper-header">
             <div class="logo">
                 <a href="../../index.html" class="logo">
-                    <img style="width: 100px; height: 70px;" src="../../images/logo.jpg" alt="logo">
+                    <img style="width: 120px; height: 120px;" src="../../images/logo9.svg" alt="logo">
                 </a>
             </div>
+            <nav class="nav-bar">
+                <ul class="nav-menu txt-caps fnt-w-l">
+                    <li><a href="../apartmani.html">Apartmani</a></li>
+                    <li><a href="../restorani.html">Restorani</a></li>
+                    <li><a href="../galerija.html">Galerija</a></li>
+                    <li><a href="../kontakt.html">Kontakt</a></li>
+                </ul>
+            </nav>
             <div class="booking">
                 <div class="language">
                     <a href="#">EN</a>
@@ -30,27 +37,12 @@
                 </div>
             </div>
         </div>
-        <nav class="nav-bar">
-            <ul class="nav-menu txt-caps fnt-w-l">
-                <li><a href="../apartmani.html">Apartmani</a></li>
-                <li><a href="../restorani.html">Restorani</a></li>
-                <li><a href="../galerija.html">Galerija</a></li>
-                <li><a href="../kontakt.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
+        </header>
     <main>
         <section class="hero">
-            <img class="hero-img" src="https://meneghetti.hr/_nuxt/assets/img/accommodation/hero/residencesa7d8d2f.jpg" alt="">
-        </section>
-        <section class="section about-us">'
-            <div class="about">
-                <h1 class="h1-el-fnt">Bonanza</h1>
-                <h2 class="h2-el-fnt">Hotel-like apartments</h2>
-                <p class="mt fs fnt-w-l">U potrazi za jedinstvenim mjestima potrebno je ponekad skrenuti s glavnog puta. No neka vas glavni putevi dovedu do Istre, do Bala. A zatim usporite i pratite cestu koja se sa svakim kilometrom sve više sužava, dok vam se priroda sve više približava. Usporite još i više te skrenite na bijelu cestu na kraju koje se pred vama otvaraju velika željezna vrata. Stigli ste na Meneghetti. Zatim zastanite bar na trenutak – i uvjerite se da se najbolja mjesta nalaze na sporednim putevima.</p>
-            </div>
-            <div class="mini-gallery">
-                <img src="https://meneghetti.hr/_nuxt/assets/img/masonry113d415a.jpg" alt="">
+            <img class="hero-img" src="../../images/hero2.jpg" alt="">
+            <div class="hero-content">
+                <h1 class="h1-el-fnt">Bonanza Standard Apartment</h1>
             </div>
         </section>
         <section class="section accommodation">
