--- a/html/galerija/studio.html
+++ b/html/galerija/studio.html
@@ -10,13 +10,21 @@
     <title>Studio | Bonanza | Apartments | Nis</title>
 </head>
 <body>
-    <header>
+    <header class="gallery-header">
         <div class="upper-header">
             <div class="logo">
                 <a href="../../index.html" class="logo">
-                    <img style="width: 100px; height: 70px;" src="../../images/logo.jpg" alt="logo">
+                    <img style="width: 120px; height: 120px;" src="../../images/logo9.svg" alt="logo">
                 </a>
             </div>
+            <nav class="nav-bar">
+                <ul class="nav-menu txt-caps fnt-w-l">
+                    <li><a href="../apartmani.html">Apartmani</a></li>
+                    <li><a href="../restorani.html">Restorani</a></li>
+                    <li><a href="../galerija.html">Galerija</a></li>
+                    <li><a href="../kontakt.html">Kontakt</a></li>
+                </ul>
+            </nav>
             <div class="booking">
                 <div class="language">
                     <a href="#">EN</a>
@@ -29,17 +37,9 @@
                 </div>
             </div>
         </div>
-        <nav class="nav-bar">
-            <ul class="nav-menu txt-caps fnt-w-l">
-                <li><a href="../apartmani.html">Apartmani</a></li>
-                <li><a href="../restorani.html">Restorani</a></li>
-                <li><a href="../galerija.html">Galerija</a></li>
-                <li><a href="../kontakt.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
+        </header>
     <main>
-        <section style="margin-top: 200px" class="section main-gallery">
+        <section class="section main-gallery">
             <h1 class="h1-el-fnt">STUDIO</h1>
             <h2 class="h2-el-fnt">POSEBNI TRENUCI KOJI DUGO OSTAJU U PAMĆENJU</h2>
             <div class="section-line"></div>
