--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -10,14 +10,22 @@
     <title>Kontakt | Bonanza | Apartments | Nis</title>
 </head>
 <body>
-    <header id="header">
+    <header>
         <div class="header-gradient"></div>
         <div class="upper-header">
             <div class="logo">
                 <a href="../index.html" class="logo">
-                    <img style="width: 100px; height: 70px;" src="../images/logo.jpg" alt="logo">
+                    <img style="width: 120px; height: 120px;" src="../images/logo9.svg" alt="logo">
                 </a>
             </div>
+            <nav class="nav-bar">
+                <ul class="nav-menu txt-caps fnt-w-l">
+                    <li><a href="apartmani.html">Apartmani</a></li>
+                    <li><a href="restorani.html">Restorani</a></li>
+                    <li><a href="galerija.html">Galerija</a></li>
+                    <li><a href="kontakt.html">Kontakt</a></li>
+                </ul>
+            </nav>
             <div class="booking">
                 <div class="language">
                     <a href="#">EN</a>
@@ -30,15 +38,7 @@
                 </div>
             </div>
         </div>
-        <nav class="nav-bar">
-            <ul class="nav-menu txt-caps fnt-w-l">
-                <li><a href="apartmani.html">Apartmani</a></li>
-                <li><a href="restorani.html">Restorani</a></li>
-                <li><a href="galerija.html">Galerija</a></li>
-                <li><a href="">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
+        </header>
     <main>
         <section class="hero">
             <img class="hero-img" src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
@@ -106,32 +106,5 @@
             </div>
         </section>
     </main>
-    <footer>
-        <div class="footer-top">
-            <div class="footer-top-left">
-                <p class="fnt-w-b">OSTANIMO U KONTAKTU</p>
-                <p class="mt">PODELITE SVOJE BONANZA ISKUSTVO</p>
-                <div class="social-networks mt">
-                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                </div>
-            </div>
-            <div class="footer-top-right">
-                <div class="line"></div>
-                <div class="email-form">
-                    <p class="fnt-w-b">PRIDRUŽITE SE KLUBU BONANZA</p>
-                    <p class="mt">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠĆENIM CENAMA!</p>
-                    <form action="post" target="_blank">
-                        <input class="mt" type="text" placeholder="Email">
-                        <button class="btn mt" type="submit">Pridruži se klubu!</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <div class="footer-down">
-            <p>Sva prava zadržana © 2023</p>
-        </div>
-    </footer>
 </body>
 </html>
