--- a/html/restorani.html
+++ b/html/restorani.html
@@ -10,14 +10,22 @@
     <title>Restorani | Bonanza | Apartments | Nis</title>
 </head>
 <body>
-    <header id="header">
+    <header>
         <div class="header-gradient"></div>
         <div class="upper-header">
             <div class="logo">
                 <a href="../index.html" class="logo">
-                    <img style="width: 100px; height: 70px;" src="../images/logo.jpg" alt="logo">
+                    <img style="width: 120px; height: 120px;" src="../images/logo9.svg" alt="logo">
                 </a>
             </div>
+            <nav class="nav-bar">
+                <ul class="nav-menu txt-caps fnt-w-l">
+                    <li><a href="apartmani.html">Apartmani</a></li>
+                    <li><a href="restorani.html">Restorani</a></li>
+                    <li><a href="galerija.html">Galerija</a></li>
+                    <li><a href="kontakt.html">Kontakt</a></li>
+                </ul>
+            </nav>
             <div class="booking">
                 <div class="language">
                     <a href="#">EN</a>
@@ -30,15 +38,7 @@
                 </div>
             </div>
         </div>
-        <nav class="nav-bar">
-            <ul class="nav-menu txt-caps fnt-w-l">
-                <li><a href="apartmani.html">Apartmani</a></li>
-                <li><a href="">Restorani</a></li>
-                <li><a href="galerija.html">Galerija</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
+        </header>
     <main>
         <section class="hero">
             <img class="hero-img" src="https://meneghetti.hr/_nuxt/assets/img/dining/heroac9e306.jpg" alt="">
