--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
         <div class="upper-header">
             <div class="logo">
                 <a href="index.html" class="logo">
-                    <img style="width: 100px; height: 100px;" src="images/logo2.svg" alt="logo">
+                    <img style="width: 120px; height: 120px;" src="images/logo9.svg" alt="logo">
                 </a>
             </div>
+            <nav class="nav-bar">
+                <ul class="nav-menu txt-caps fnt-w-l">
+                    <li><a href="html/apartmani.html">Apartmani</a></li>
+                    <li><a href="html/restorani.html">Restorani</a></li>
+                    <li><a href="html/galerija.html">Galerija</a></li>
+                    <li><a href="html/kontakt.html">Kontakt</a></li>
+                </ul>
+            </nav>
             <div class="booking">
                 <div class="language">
                     <a href="#">EN</a>
@@ -30,18 +38,10 @@
                 </div>
             </div>
         </div>
-        <nav class="nav-bar">
-            <ul class="nav-menu txt-caps fnt-w-l">
-                <li><a href="html/apartmani.html">Apartmani</a></li>
-                <li><a href="html/restorani.html">Restorani</a></li>
-                <li><a href="html/galerija.html">Galerija</a></li>
-                <li><a href="html/kontakt.html">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header>
+        </header>
     <main>
         <section class="hero">
-            <img class="hero-img" src="images/hero2.jpg" alt="">
+            <img class="hero-img" src="images/gallery2.jpg" alt="">
         </section>
         <section class="section about-us">
             <div class="about">
