Mini gallery changes

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </header>
     <main>
         <section class="hero">
-            <img class="hero-img" src="images/gallery2.jpg" alt="">
+            <img class="hero-img" src="images/hero2.jpg" alt="">
         </section>
         <section class="section about-us">
             <div class="about">
@@ -64,7 +64,7 @@
                         <p class="hidden-fnt">pogledajte sliku u galeriji</p>
                     </div>
                 </div>
-                <div class="image w-three">
+                <div class="image w-three n-m">
                     <img src="images/gallery2.jpg" onclick="openModal();currentSlide(2)" alt="">
                     <div class="image-overlay" onclick="openModal();currentSlide(2)" >
                         <p class="hidden-fnt">pogledajte sliku u galeriji</p>
@@ -82,7 +82,7 @@
                         <p class="hidden-fnt">pogledajte sliku u galeriji</p>
                     </div>
                 </div>
-                <div class="image w-one">
+                <div class="image w-one n-m">
                     <img src="images/gallery5.JPG" onclick="openModal();currentSlide(5)" alt="">
                     <div class="image-overlay" onclick="openModal();currentSlide(5)" >
                         <p class="hidden-fnt">pogledajte sliku u galeriji</p>
