--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                     <a href="#" style="color:#b99b55">RS</a>
                 </div>
                 <div class="booking-section">
-                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezerviši</a>
+                    <a href="#" class="btn btn-ftr">Rezerviši</a>
                     <p class="best-rate txt-caps">Garancija najbolje cene</p>
                 </div>
             </div>
         </div>
-        </header>
+    </header>
     <main>
         <section class="hero">
             <img class="hero-img" src="images/hero2.jpg" alt="">
@@ -215,7 +215,7 @@
                     <p class="mt">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠĆENIM CENAMA!</p>
                     <form action="php/sendToDatabase.php" method="post">
                         <input class="mt" name="email" type="text" placeholder="Email">
-                        <button class="btn mt" name="submit" type="submit">Pridruži se klubu!</button>
+                        <button class="btn btn-ftr mt" name="submit" type="submit">Pridruži se klubu!</button>
                     </form>
                 </div>
             </div>
