--- a/html/galerija.html
+++ b/html/galerija.html
@@ -112,7 +112,7 @@
                     <p class="mt">PRIMITE NAŠE NAJBOLJE PONUDE I UŽIVAJTE U POVLAŠĆENIM CENAMA!</p>
                     <form action="post" target="_blank">
                         <input class="mt" type="text" placeholder="Email">
-                        <button class="btn mt" type="submit">Pridruži se klubu!</button>
+                        <button class="btn btn-ftr mt" type="submit">Pridruži se klubu!</button>
                     </form>
                 </div>
             </div>
