--- a/html/galerija/superior.html
+++ b/html/galerija/superior.html
@@ -50,7 +50,7 @@
                         <p>pogledajte sliku u galeriji</p>
                     </div>
                 </div>
-                <div class="image w-three">
+                <div class="image w-three n-m">
                     <img src="../../images/image2.jpg">
                     <div class="image-overlay">
                         <p>pogledajte sliku u galeriji</p>
@@ -68,7 +68,7 @@
                         <p>pogledajte sliku u galeriji</p>
                     </div>
                 </div>
-                <div class="image w-one">
+                <div class="image w-one n-m">
                     <img src="../../images/image2.jpg">
                     <div class="image-overlay">
                         <p>pogledajte sliku u galeriji</p>
@@ -80,7 +80,7 @@
                         <p>pogledajte sliku u galeriji</p>
                     </div>
                 </div>
-                <div class="image w-three">
+                <div class="image w-three n-m">
                     <img src="../../images/image2.jpg">
                     <div class="image-overlay">
                         <p>pogledajte sliku u galeriji</p>
@@ -98,7 +98,7 @@
                         <p>pogledajte sliku u galeriji</p>
                     </div>
                 </div>
-                <div class="image w-one">
+                <div class="image w-one n-m">
                     <img src="../../images/image2.jpg">
                     <div class="image-overlay">
                         <p>pogledajte sliku u galeriji</p>
