Button changes and hover added

--- a/html/apartmani.html
+++ b/html/apartmani.html
@@ -32,7 +32,7 @@
                     <a href="#" style="color:#b99b55">RS</a>
                 </div>
                 <div class="booking-section">
-                    <a href="https://meneghetti.book-official-website.com/book.php?page=availability&companyid=838&hotelid=4871&checkin=2023-07-30&checkout=2023-07-31&ibelang=hr&crcid=eca91ee8cea07cd497228d2d0aadad5b" class="btn">Rezerviši</a>
+                    <button href="#" class="btn btn-primary">Rezerviši</button>
                     <p class="best-rate txt-caps">Garancija najbolje cene</p>
                 </div>
             </div>
