--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a href="#" style="color:#b99b55">RS</a>
                 </div>
                 <div class="booking-section">
-                    <a href="#" class="btn btn-ftr">Rezerviši</a>
+                    <button href="#" class="btn btn-primary">Rezerviši</button>
                     <p class="best-rate txt-caps">Garancija najbolje cene</p>
                 </div>
             </div>
