--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <span>/</span>
                     <a href="#" style="color:#b99b55">RS</a>
                 </div>
+                <div class="burger-menu">
+                    <img src="images/menu.svg" alt="" onclick="myFunction()">
+                </div>
                 <div class="booking-section">
                     <button href="#" class="btn btn-primary">Rezerviši</button>
                     <p class="best-rate txt-caps">Garancija najbolje cene</p>
