Update gallery responsiveness and refactor JS slider logic
Introduced a new responsive design in the CSS for the gallery feature
with adjustments to various container elements to improve visibility on
smaller screens. A hidden slider component was added to enhance the
mobile user experience. Additionally, streamlined the JavaScript slider
logic by commenting out the outdated code and preparing for a future
update with new imagery and text. Reduced top margin for the apartment
container to maintain layout consistency across different device sizes.

--- a/html/galerija.html
+++ b/html/galerija.html
@@ -87,6 +87,20 @@
                     </div>
                 </div>    
             </div>
+            <div class="slider hidden">
+                <div class="apartments-container-item apartment-item">
+                    <a href="galerija/studio.html" class="apartment-image">
+                        <img src="../images/studio.JPG" alt="">
+                        <div class="apartment-content-overlay ptb plr">
+                            <p class="apartment-title">Studio</p>
+                            <div class="aparment-content-overlay-hidden">
+                                <p>Za opušten odmor vaše porodice</p>
+                                <p class="mt hidden-fnt">Pogledaj</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </section>
         <section class="section video">
             <div class="video-container">
